styles.css
/* ... */
@media (max-width: 669px) {
    .project {
        display: block;
        background-color: #0a130e;
        border-radius: 20px;
        margin-bottom: 24px;
        margin-left: auto;
        margin-right: auto;
        max-width: 400px;
        text-decoration: none;
        border: 1px solid #1d2722;
        overflow: hidden;
        transition: all 0.3s;
    }

    .project-image {
        display: block;
        width: 96px;
        height: 96px;
        padding: 16px;
        margin: 16px;
        margin-left: auto;
        margin-right: auto;
        border-radius: 15px;
        border: 1px solid #7474745f;
        transition: all 0.3s;
    }

    .project-image img {
        width: 96px;
        height: 96px;
        object-fit: scale-down;
    }

    .project-image.sv-ttk-colorizer img {
        width: 100px;
        height: 100px;
    }

    .project-text {
        padding: 16px;
        padding-top: 8px;
    }

    .project-title {
        line-clamp: 2;
        -webkit-line-clamp: 2;
        text-align: center;
    }

    .project-summary {
        line-clamp: 3;
        -webkit-line-clamp: 3;
    }

    .project-stats {
        justify-content: center;
    }
}

.project-image {
    display: flex;
    align-items: center;
    justify-content: center;
}

@media(hover: hover) and (pointer: fine) {
    .project:hover {
        background-color: #0b2014;
    }

    .project:hover, .project:hover .project-text {
        border-color: #222c27;
    }

    .project:hover .project-image {
        opacity: 0.5;
    }

    .project:hover .project-image img {
        scale: 1.03;
    }

    .project:hover .project-stat {
        filter: brightness(1.5);
    }

    .project:hover .project-text .project-title {
        color: #9bd6ae;
    }

    .project:hover .project-text .project-summary {
        color: #82b894;
    }

    .project:hover font {
        color: #82b894;
    }

    .project:hover, .project:hover .project-text {
        border-color: #1d2c24;
    }
}

.project-image img {
    transition: all 0.3s;
}

.project:active {
    background-color: #0e291a;
    border-radius: 20px;
}

.project:active, .project:active .project-text {
    border-color: #2a3f34;
}

.gbtn {
    background-color: #27b35f !important;
    color: #000000 !important;
    border-radius: 100px !important;
    opacity: 1 !important;
    width: 48px !important;
    height: 48px !important;
    padding: 0px !important;
    transition: background-color 0.3s, opacity 0.3s;
}

.gbtn.disabled {
    opacity: 0.3 !important;
    cursor: default;
}

.gbtn .iconify {
    width: 24px !important;
    height: 24px !important;
}

.gbtn .iconify path {
    fill: #000000 !important;
}

@media(hover: hover) and (pointer: fine) {
    .gbtn:not(.gbtn.disabled, .gbtn.gclose):hover {
        background-color: #1c8144 !important;
    }
}

.gbtn:not(.gbtn.disabled, .gbtn.gclose):active {
    background-color: #165f34 !important;
}

.gbtn.gclose {
    background-color: #00000090 !important;
}

.gbtn .iconify {
    width: 32px !important;
    height: 32px !important;
}

.gbtn.gclose .iconify path {
    fill: #b4cabe !important;
}

@media(hover: hover) and (pointer: fine) {
    .gbtn.gclose:hover {
        background-color: #165f3460 !important;
    }
}

.gbtn.gclose:active {
    background-color: #1c814460 !important;
}

.button {
    display: grid;
    color: #0a1812;
    background-color: #27b35f;
    text-decoration: none;
    padding: 13px;
    padding-left: 23px;
    padding-right: 23px;
    border-radius: 100px;
    font-weight: 600;
    font-size: 17px;
    width: fit-content;
    overflow: hidden;
    transition: background-color 0.3s, border-color 0.3s;
}

.button.normal {
    border: 1px solid #444e48;
    background: none;
}

.button.normal.withicon {
    padding-left: 22px;
    padding-right: 22px;
    padding-top: 12px; 
    padding-bottom: 12px; 
}

.button.normal.withicon {
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 10px; 
    padding-bottom: 10px; 
}

.button.normal p, .button.normal span {
    color: #9ebbab;
}

.button.withicon {
    display: flex; 
    text-align: center; 
    width: auto; 
    padding-left: 21px;
    padding-right: 21px;
    padding-top: 11px; 
    padding-bottom: 11px;
}

@media(hover: hover) and (pointer: fine) {
    .button:hover {
        background-color: #1c8144;
    }

    .button.normal:hover {
        background-color: #1c814420;
    }
}

.button:active {
    background-color: #165f34;
}

.button.normal:active {
    background-color: #165f3450;
    border-color: #5f7a6c;
}

.tooltip {
    visibility: hidden;
    position: fixed;
    padding: 5px;
    font-size: 13px;
    font-weight: 600;
    line-height: normal;
    background-color: #1d3327;
    border: #243d2e solid 1px;
    color: #b4cabe;
    box-shadow: 1px 1px 10px 0px #0000003f;
    border-radius: 5px;
    z-index: 1;
    width: max-content;
    opacity: 0;
    user-select: none;
    scale: 0.9;
    transform-origin: top;
    transition: all 0.3s;
}

@media(hover: hover) and (pointer: fine) {
    .btn-titlebar:hover .tooltip, .btn-titlebar:focus-visible .tooltip, .dino:hover .tooltip1 {
        visibility: visible;
        opacity: 1;
        scale: 1;
        transition: all 0.5s;
        transition-delay: 1s;
    }
}

.dot-beginner:hover .tooltip {
    visibility: visible;
    opacity: 1;
    scale: 1;
    transition: all 0.5s;
    transition-delay: 1s;
}

.tooltip1 {
    visibility: hidden;
    position: absolute;
    padding: 5px;
    font-size: 13px;
    font-weight: 600;
    background-color: #17271e;
    border: #203328 solid 1px;
    color: #b4cabe;
    box-shadow: 1px 1px 10px 0px #0000003f;
    border-radius: 5px;
    z-index: 2;
    width: max-content;
    bottom: 200px;
    right: 50px;
    opacity: 0;
    scale: 0.9;
    transform-origin: bottom;
    transition: all 0.3s;
}
/* ... */

